# orderbook

./: .gitignore  README.md
backend/: CMakeLists.txt
backend/cmake/: FindPCAP.cmake
backend/include/api/: json_schema.hpp  message_bus.hpp  ws_server.hpp
backend/include/app/: engine.hpp  modes.hpp
backend/include/book/: analytics.hpp  book_snapshot.hpp  l3_order_book.hpp
backend/include/core/: config.hpp  errors.hpp  logging.hpp  time.hpp  types.hpp
backend/include/io/: itch_binfile_reader.hpp  pcap_reader.hpp  pcap_writer.hpp  udp_receiver.hpp  udp_sender.hpp
backend/include/metrics/: counters.hpp  latency.hpp  reporter.hpp
backend/include/protocols/: itch50.hpp  itch_decoder.hpp  moldudp64.hpp
backend/include/transport/: ievent_queue.hpp  mutex_queue.hpp  spsc_ring.hpp
backend/src/api/: json_schema.cpp  ws_server.cpp
backend/src/app/: engine.cpp  main.cpp  modes.cpp
backend/src/book/: analytics.cpp  book_snapshot.cpp  l3_order_book.cpp
backend/src/core/: time.cpp
backend/src/io/: itch_binfile_reader.cpp  pcap_reader.cpp  pcap_writer.cpp  udp_receiver.cpp  udp_sender.cpp
backend/src/metrics/: reporter.cpp
backend/src/protocols/: itch_decoder.cpp  moldudp64.cpp
backend/src/transport/: mutex_queue.cpp  spsc_ring.cpp
backend/tests/: test_end_to_end_replay.cpp  test_itch_decoder.cpp  test_l3_book.cpp  test_moldudp64.cpp
docs/: ARCHITECTURE.md  DATASETS.md  ITCH_NOTES.md  MOLDUDP64_NOTES.md  ROLE_OWNERSHIP.md  RUNBOOK.md  UI_SPEC.md
frontend/: README.md  index.html  package.json  postcss.config.js  tailwind.config.ts  vite.config.ts
frontend/src/: main.tsx
frontend/src/app/: App.tsx  types.ts  ws.ts
frontend/src/components/: Controls.tsx  DepthChart.tsx  OrderBookL3.tsx  OrderTape.tsx  StatsPanel.tsx
frontend/src/styles/: theme.css
tools/itchbin_to_pcap/: CMakeLists.txt  README.md  main.cpp
